--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tools-dev"]
 	path = tools-dev
 	url = https://gitee.com/homqyy/tools-dev.git
+[submodule "auto/lib/kcp/src"]
+	path = auto/lib/kcp/src
+	url = https://github.com/skywind3000/kcp
