--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,31 @@
         "*.c": "c",
         "*.h": "c",
         "istream": "c",
-        "functional": "c"
+        "functional": "c",
+        "*.tcc": "c",
+        "algorithm": "c",
+        "memory": "c",
+        "random": "c",
+        "fstream": "c",
+        "iosfwd": "c",
+        "ostream": "c",
+        "sstream": "c",
+        "streambuf": "c",
+        "array": "c",
+        "atomic": "c",
+        "cmath": "c",
+        "unordered_map": "c",
+        "exception": "c",
+        "memory_resource": "c",
+        "optional": "c",
+        "string_view": "c",
+        "type_traits": "c",
+        "utility": "c",
+        "limits": "c",
+        "new": "c",
+        "numeric": "c",
+        "system_error": "c",
+        "tuple": "c",
+        "typeinfo": "c"
     }
 }
