--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "numeric": "c",
         "system_error": "c",
         "tuple": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "stdexcept": "c"
     }
 }
