add branche update/* to actions

--- a/.github/workflows/test-nginx-core.yml
+++ b/.github/workflows/test-nginx-core.yml
@@ -2,7 +2,7 @@ name: test nginx core
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, update/* ]
   pull_request:
     branches: [ master ]
 
