--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,11 +2,37 @@ name: test tengine
 
 on:
   push:
-    branches: [ master, update/* ]
+    branches: [ master, update/*, actions/* ]
   pull_request:
     branches: [ master ]
 
 jobs:
+  docker:
+    runs-on: ubuntu-latest
+    needs: build-and-test
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/hengine:latest
+          labels: |
+            cn.homqyy.docker.title=hengine
+            cn.homqyy.docker.author=${{ secrets.DOCKER_HUB_USERNAME }}
+            ch.homqyy.docker.email=${{ secrets.EMAIL }}
+            cn.homqyy.docker.url=https://hub.docker.com/u/${{ secrets.DOCKER_HUB_USERNAME }}
+
   build-and-test:
    runs-on: "ubuntu-20.04"
    strategy:
